# ads-client

./: Cargo.toml  README.md
examples/dynamic-symbols/: Cargo.toml
src/: lib.rs  plc_client.rs  plc_connection.rs
src/data_types/: mod.rs
src/data_types/primitives/: bool.rs  dint.rs  int.rs  lreal.rs  mod.rs  real.rs  string16.rs  time.rs  time_struct.rs  udint.rs  uint.rs  word.rs
