[package]
name = "ads-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads = "0.4.3"
anyhow = "1.0.75"
bytemuck = "1.16.1"
chrono = "0.4.31"
crossbeam-channel = "0.5.8"
self_cell = "1.0.3"
zerocopy = { version = "0.7.29", features = ["derive"] }
